<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.satset</groupId>
    <artifactId>satset-services</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>satset-services</name>
    <description>SatSetGo - Multi-module Maven project</description>

    <modules>
        <module>satset-core</module>
        <module>satset-wallet</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <testcontainers.version>1.20.4</testcontainers.version>
        <jackson-bom.version>3.1.0</jackson-bom.version>
        <tomcat.version>11.0.18</tomcat.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <!-- CVE-2026-24400: XXE in isXmlEqualTo, fixed in 3.27.7 -->
        <assertj.version>3.27.7</assertj.version>
        <!-- CVE-2026-1225 + CVE-2025-11226: RCE/ACE in logback config processing, fixed in 1.5.25 -->
        <logback.version>1.5.25</logback.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- CVE-2024-47554: DoS via XmlStreamReader, fixed in 2.14.0+ -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.17.0</version>
            </dependency>
            <!-- Pin Jackson 2.x to latest LTS — overrides transitive version from keycloak-admin-client -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>2.21.1</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.21.1</version>
            </dependency>
            <!-- jackson-annotations uses major.minor versioning only (no patch) since 2.20 -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>2.21</version>
            </dependency>
            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Shared build config — children inherit compiler + surefire settings -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.42</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <environmentVariables>
                        <DOCKER_API_VERSION>1.47</DOCKER_API_VERSION>
                        <TESTCONTAINERS_RYUK_DISABLED>true</TESTCONTAINERS_RYUK_DISABLED>
                    </environmentVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>